--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   lucide_icons_flutter: ^3.1.5
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.7
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
