--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_native_splash: ^2.4.7
   flutter_riverpod: ^3.0.3
   intl: ^0.20.2
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  go_router: ^16.3.0
 
 dev_dependencies:
   flutter_test:
