--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.1.0
   go_router: ^16.3.0
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
+  google_maps_flutter: ^2.14.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
