--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.5.3
   cloudinary_public: ^0.23.1
   image_picker: ^1.2.0
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
