--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^6.3.2
   lottie: ^3.3.2
   font_awesome_flutter: ^10.12.0
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
