--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   lottie: ^3.3.2
   font_awesome_flutter: ^10.12.0
   google_sign_in: ^7.2.0
+  circular_bottom_navigation: ^2.4.0
 
 dev_dependencies:
   flutter_test:
