--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   syncfusion_flutter_charts: ^31.2.10
   skeletonizer: ^2.1.0+1
   dartz: ^0.10.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
