--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   skeletonizer: ^2.1.0+1
   dartz: ^0.10.1
   gap: ^3.0.1
+  awesome_snackbar_content: ^0.1.8
 
 dev_dependencies:
   flutter_test:
