--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   dartz: ^0.10.1
   gap: ^3.0.1
   awesome_snackbar_content: ^0.1.8
+  animations: ^2.1.1
 
 dev_dependencies:
   flutter_test:
