--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   gap: ^3.0.1
   awesome_snackbar_content: ^0.1.8
   animations: ^2.1.1
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
