--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   awesome_snackbar_content: ^0.1.8
   animations: ^2.1.1
   geocoding: ^4.0.0
+  equatable: ^2.0.7
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
