--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   geocoding: ^4.0.0
   equatable: ^2.0.7
   uuid: ^4.5.2
+  delightful_toast: ^1.1.0
 
 dev_dependencies:
   flutter_test:
