--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   delightful_toast: ^1.1.0
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.2
+  flutter_polyline_points: ^3.1.0
 
 dev_dependencies:
   flutter_test:
