--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.2
   flutter_polyline_points: ^3.1.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
