--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_polyline_points: ^3.1.0
   flutter_rating_bar: ^4.0.1
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
