--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_polyline_points: ^3.1.0
   flutter_rating_bar: ^4.0.1
   http: ^1.6.0
+  custom_info_window: ^1.0.1
 
 dev_dependencies:
   flutter_test:
